fix: overlaping elements on mobile and routing fix

--- a/src/components/ButtonComponent/Button.styles.css
+++ b/src/components/ButtonComponent/Button.styles.css
@@ -8,4 +8,6 @@
   border: none;
 
   padding: 0.5rem;
+
+  cursor: pointer;
 }
